<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Word Search</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search">Search</string>
    <string name="load_definition">Load Definition</string>
    <string name="save_definition">Save Definition</string>
    <string name="enter_word_here">Enter Word Here</string>
    <string name="instructions2">Too many requests will lock out the API key.</string>
    <string name="instructions1">To translate enter a word below.</string>
    <string name="bannerimage">bannerImage</string>
	<string-array name="spinner_arrays">
        <item>All Languages</item>
        <item>English</item>
        <item>French</item>
    </string-array>
</resources>
