<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bggradient"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <TextView
        android:id="@+id/instructionText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/banner"
        android:gravity="center"
        android:text="@string/instructions1" />
	<View
	    android:id="@+id/view"
	    android:layout_width="0dp"
	    android:layout_height="1dp"
	    android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/instructionText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/instructionText"
        android:gravity="center"
        android:text="@string/instructions2" />

    <EditText
        android:id="@+id/searchBox"
        style="@style/AppTheme"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/instructionText2"
        android:ems="10"
        android:gravity="center_vertical|center"
        android:hint="@string/enter_word_here"
        android:inputType="textPersonName" />
    
    <ImageView
        android:id="@+id/banner"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/instructionText2"
        android:contentDescription="@string/bannerimage"
        android:src="@drawable/wordsearch" />

    <Button
        android:id="@+id/searchButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/search" />

    <TextView
        android:id="@+id/columnText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/searchButton"
        android:layout_alignLeft="@+id/view"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/optionSpinner"
        android:gravity="center_vertical|center_horizontal" />

    <TextView
        android:id="@+id/columnText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/searchButton"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/view"
        android:layout_below="@+id/optionSpinner"
        android:gravity="center_vertical|center_horizontal" />

    <Spinner
        android:id="@+id/optionSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/searchBox"
        android:entries="@array/spinner_arrays" />

</RelativeLayout>